Fix: Working config for small datasize of size 1

--- a/configs/exp1.yaml
+++ b/configs/exp1.yaml
@@ -1,11 +1,17 @@
 SYSTEM:
   EXP_NAME: 'exp1'
+  LOG_FREQ: 5
 GLIMPSE_SENSOR:
-  NUM_SCALES :  1
-  WIDTH : 28
+  NUM_SCALES :  2
+  WIDTH : 14
 GLIMPSE_NETWORK:
-  NUM_GLIMPSE: 1
+  NUM_GLIMPSE: 2
+  OUT_SIZE: 128
+DATA:
+  NUM_DATA_POINTS: 100
 SOLVER:
-  LR: 0.0001
-  WEIGHT_DECAY: 0.0001
+  LR: 0.001
+  WEIGHT_DECAY: 0.001
   BATCH_SIZE: 5
+  NUM_EPOCHS: 1500
+  PAITENCE: 1000
